# serde

./: .gitignore  Cargo.toml  build.rs  search-index.js
benches/: bench.rs
num/iter/: struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
rustc_serialize/json/: struct.Parser.html
serde/: index.html
serde/bytes/: index.html  struct.ByteBuf.html  struct.ByteBufVisitor.html  struct.Bytes.html
serde/de/: index.html  trait.Deserialize.html  trait.Deserializer.html  trait.EnumMapVisitor.html  trait.EnumSeqVisitor.html  trait.EnumVisitor.html  trait.Error.html  trait.MapVisitor.html  trait.SeqVisitor.html  trait.VariantVisitor.html  trait.Visitor.html
serde/de/impls/: index.html  struct.BTreeMapVisitor.html  struct.BTreeSetVisitor.html  struct.HashMapVisitor.html  struct.HashSetVisitor.html  struct.PrimitiveVisitor.html  struct.UnitVisitor.html  struct.VecVisitor.html
serde/de/value/: enum.Error.html  index.html  struct.BoolDeserializer.html  struct.CharDeserializer.html  struct.F32Deserializer.html  struct.F64Deserializer.html  struct.I16Deserializer.html  struct.I32Deserializer.html  struct.I64Deserializer.html  struct.I8Deserializer.html  struct.IsizeDeserializer.html  struct.MapDeserializer.html  struct.SeqDeserializer.html  struct.StrDeserializer.html  struct.StringDeserializer.html  struct.U16Deserializer.html  struct.U32Deserializer.html  struct.U64Deserializer.html  struct.U8Deserializer.html  struct.UnitDeserializer.html  struct.UsizeDeserializer.html  trait.ValueDeserializer.html
serde/iter/: index.html  struct.LineColIterator.html
serde/json/: index.html
serde/json/builder/: index.html  struct.ArrayBuilder.html  struct.ObjectBuilder.html
serde/json/de/: fn.from_iter.html  fn.from_reader.html  fn.from_slice.html  fn.from_str.html  index.html  struct.Deserializer.html
serde/json/error/: enum.Error.html  enum.ErrorCode.html  index.html
serde/json/ser/: fn.escape_bytes.html  fn.escape_str.html  fn.to_string.html  fn.to_string_pretty.html  fn.to_vec.html  fn.to_vec_pretty.html  fn.to_writer.html  fn.to_writer_pretty.html  index.html  struct.CompactFormatter.html  struct.PrettyFormatter.html  struct.Serializer.html  trait.Formatter.html
serde/json/value/: enum.Value.html  fn.from_value.html  fn.to_value.html  index.html  struct.Deserializer.html  struct.Serializer.html
serde/ser/: index.html  trait.MapVisitor.html  trait.SeqVisitor.html  trait.Serialize.html  trait.Serializer.html
serde/ser/impls/: index.html  struct.MapIteratorVisitor.html  struct.SeqIteratorVisitor.html  struct.TupleVisitor1.html  struct.TupleVisitor10.html  struct.TupleVisitor11.html  struct.TupleVisitor12.html  struct.TupleVisitor2.html  struct.TupleVisitor3.html  struct.TupleVisitor4.html  struct.TupleVisitor5.html  struct.TupleVisitor6.html  struct.TupleVisitor7.html  struct.TupleVisitor8.html  struct.TupleVisitor9.html
serde_codegen/: Cargo.toml  build.rs
serde_codegen/src/: de.rs  field.rs  lib.rs  lib.rs.in  ser.rs
serde_macros/: .Cargo.toml.un~  Cargo.toml  build.rs
serde_macros/src/: lib.rs
serde_tests/benches/: bench_log.rs
serde_tests/tests/: test_de.rs  test_json.rs
src/serde/json/: ser.rs.html
tests/: test.rs  test_annotations.rs  test_bytes.rs  test_json.rs  test_ser.rs
