[package]
name = "serde"
version = "0.3.3"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A generic serialization/deserialization framework"
repository = "https://github.com/serde-rs/serde"
documentation = "http://serde-rs.github.io/serde/serde"
readme = "README.md"
keywords = ["serialization"]
build = "build.rs"

[build-dependencies]
syntex = "*"
syntex_syntax = "*"
serde_codegen = { version = "*", path = "serde_codegen" }

[dependencies]
num = "*"
syntex = "*"
syntex_syntax = "*"

[dev-dependencies]
rustc-serialize = "*"
serde_macros = { version = "*", path = "serde_macros" }
syntex = "*"
syntex_syntax = "*"
