[package]
name = "serde_codegen"
version = "0.4.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros to auto-generate implementations for the serde framework"
repository = "https://github.com/erickt/rust-serde"
build = "build.rs"

[features]
default = []
nightly = ["quasi_macros"]
with-syntex = ["quasi/with-syntex", "quasi_codegen/with-syntex", "syntex", "syntex_syntax"]

[build-dependencies]
quasi_codegen = { verision = "*", path = "../../rust-quasi/quasi_codegen", optional = true }
syntex = { version = "*", path = "../../rust-syntex/syntex", optional = true }

[dependencies]
aster = { version = "*", path = "../../rust-aster", default-features = false }
quasi = { verision = "*", path = "../../rust-quasi/quasi", default-features = false }
quasi_macros = { version = "*", path = "../../rust-quasi/quasi_macros", optional = true }
syntex = { version = "*", path = "../../rust-syntex/syntex", optional = true }
syntex_syntax = { version = "*", path = "../../rust-syntex/syntex_syntax", optional = true }
